@@ -262,6 +262,16 @@
     />
 
     <localInspection
+            language="Snakemake" shortName="SmkLocalRuleConfusingReference"
+            enabledByDefault="true"
+            level="ERROR"
+            suppressId="SmkLocalRuleConfusingReference"
+            bundle="SnakemakeBundle"
+            groupKey="INSP.GROUP.snakemake"
+            key="INSP.NAME.localrule.confusing.ref"
+            implementationClass="com.jetbrains.snakecharm.inspections.SmkLocalRuleConfusingReference"
+    />
+    <localInspection
             language="SnakemakeSL" shortName="SmkWildcardNotDefinedInspection"
             enabledByDefault="true"
             level="ERROR"
