@@ -41,6 +41,10 @@ INSP.NAME.rule.or.checkpoint.name.yet.undefined.msg=Rule or Checkpoint name ''{0
 # SmkLocalrulesRuleorderRepeatedRuleInspection
 INSP.NAME.localrules.ruleorder.repeated.rule=This rule has already been added to this section.
 
+# SmkLocalRuleNotInFile
+INSP.NAME.localrule.confusing.ref=Confusing local rule name, the rule isn''t defined in this file.
+INSP.NAME.localrule.confusing.ref.msg=Rule ''{0}'' isn''t defined in this file, not an error but it is confusing.
+
 # SmkLambdaRuleParamsInspection
 INSP.NAME.only.specific.lambda.params=Only specific lambda params should be used in this section.
 INSP.NAME.only.these.parameters.in.section=Only use ''{0}'' as lambda parameter in ''{1}'' section.
